--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -20,3 +20,10 @@ spec:
           image: 654789606772.dkr.ecr.ap-northeast-2.amazonaws.com/user03-complain:v2
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: "1000m"
+              memory: "256Mi"
+            limits:
+              cpu: "2500m"  
+              memory: "512Mi"
