--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: complain
-          image: 654789606772.dkr.ecr.ap-northeast-2.amazonaws.com/user03-complain:v4
+          image: 654789606772.dkr.ecr.ap-northeast-2.amazonaws.com/user03-complain:v5
           ports:
             - containerPort: 8080
           resources:
@@ -27,3 +27,11 @@ spec:
             limits:
               cpu: "2500m"  
               memory: "512Mi"
+          readinessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 10
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 10
