--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: complain
-          image: 654789606772.dkr.ecr.ap-northeast-2.amazonaws.com/user03-complain:v5
+          image: 654789606772.dkr.ecr.ap-northeast-2.amazonaws.com/user03-complain:v6
           ports:
             - containerPort: 8080
           resources:
@@ -27,6 +27,10 @@ spec:
             limits:
               cpu: "2500m"  
               memory: "512Mi"
+          args:
+            - /bin/sh
+            - -C
+            - touch /tmp/healthy; sleep 60; rm -rf /tmp/healthy; sleep 600
           readinessProbe:
             httpGet:
               path: '/actuator/health'
@@ -35,3 +39,15 @@ spec:
             timeoutSeconds: 2
             periodSeconds: 5
             failureThreshold: 10
+          livenessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            exec:
+              command: 
+              - cat
+              - /tmp/healthy
+            initialDelaySeconds: 120
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 5
