--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -17,9 +17,15 @@ spec:
     spec:
       containers:
         - name: complain
-          image: 654789606772.dkr.ecr.ap-northeast-2.amazonaws.com/user03-complain:v8
+          image: 654789606772.dkr.ecr.ap-northeast-2.amazonaws.com/user03-complain:v10
           ports:
             - containerPort: 8080          
+          env:
+          - name: sync_url
+            valueFrom:
+              configMapKeyRef:
+                name: airbnb-complain-config
+                key: url           
           resources:
             requests:
               cpu: "1000m"
